AWS Cognito Auth + Rewards functionality